# walrus_testdata

./: CMakeLists.txt  README.md  package.xml
kinectv2/calibration/: 0000_color_points.yaml  0000_ir_points.yaml  0000_sync_ir_points.yaml  0001_color_points.yaml  0001_ir_points.yaml  0001_sync_ir_points.yaml  0002_color_points.yaml  0002_ir_points.yaml  0002_sync_ir_points.yaml  0003_color_points.yaml  0003_ir_points.yaml  0003_sync_ir_points.yaml  0004_color_points.yaml  0004_ir_points.yaml  0004_sync_ir_points.yaml  0005_color_points.yaml  0005_ir_points.yaml  0005_sync_ir_points.yaml  0006_color_points.yaml  0006_ir_points.yaml  0006_sync_ir_points.yaml  0007_color_points.yaml  0007_ir_points.yaml  0007_sync_ir_points.yaml  0008_color_points.yaml  0008_ir_points.yaml  0008_sync_ir_points.yaml  0009_color_points.yaml  0009_sync_ir_points.yaml  0010_color_points.yaml  0011_color_points.yaml  calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinectv2/stairs/higgins_short/: 1424402071410410.pcd  1424402071439402.pcd  1424402071481997.pcd  1424402071660416.pcd  1424402071688973.pcd  1424402071964906.pcd  1424402072014758.pcd
kinectv2/stairs/higgins_stair_angle/: description.yaml
kinectv2/stairs/higgins_stair_far/: description.yaml
scripts/: kinectv2_ak_far_stair_data.sh  kinectv2_ak_near_stair_data.sh  kinectv2_higgins_angle_stair_data.sh  kinectv2_higgins_far_stair_data.sh  kinectv2_higgins_near_stair_data.sh  kinectv2_higgins_short_stair_data.sh  kinectv2_stair_data.sh
src/: multi_pcd_pub.cpp
(+1 files in other folders)
